# terminal_timer

./: .gitignore  Cargo.toml  LICENSE  README.md  wix.json
.github/workflows/: release.yml  test.yml
src/: main.rs  tests.rs
wix/: LICENSE.rtf  main.wxs
