[package]
name = "terminal_timer"
authors = ["Arman511"]
version = "0.1.0"
edition = "2024"
license-file = "LICENSE.rtf"
description = "A terminal-based timer tool with audio notifications"
homepage = "https://github.com/Arman511/terminal_timer"


[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
ctrlc = "3.4.7"
indicatif = "0.17.11"
rand = "0.9.1"
regex = "1.11.1"
rodio = "0.20.1"
