[package]
name = "terminal_timer"
authors = ["Arman511"]
version = "1.1.0"
edition = "2024"
license-file = "LICENSE.rtf"
description = "A terminal-based timer tool with song notifications"
homepage = "https://github.com/Arman511/terminal_timer"


[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
ctrlc = "3.4.7"
indicatif = "0.17.11"
once_cell = "1.21.3"
rand = "0.9.1"
regex = "1.11.1"
rodio = "0.20.1"
